kubernetes/main/apps/remote/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: remote
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
