kubernetes/main/apps/remote/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: remote
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - health
  egress:
    - toEntities:
        - health
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-volsync-movers
  namespace: remote
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/created-by: volsync
  egress:
    - toCIDR:
        - 149.137.128.0/20
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: api.backblazeb2.com
        - matchPattern: "*.backblazeb2.com"
        - matchPattern: "*.backblaze.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
